
2006-10-11 (REL_1_0_4) Christian Walter <wolti@sil.at>:
 Notes: Fixed bug when more than 255 coils are requested. Fixed bug in 
   Linux/Cygwin port when not all bytes could be written by the first 
   call to write. Added support for removing previously registered
   function handlers.

 Detailed notes:
   - BUG (ALL): mbfunccoils contained a bug which limited the amount
      of coils to read to 255. 
   - BUG (LINUX): prvbMBPortSerialWrite contained a bug in the loop
      which writes the RTU/ASCII frame to the serial file descriptor.
      If not all bytes where written in the first call or write was
      interrupted the sent frame is corrupted.
   - FEATURE (ALL): eMBRegisterCB now supports NULL as handler 
      argument in which case a previously registered function
	  handler is deregistered from the protocol stack.

2006-09-27 (REL_1_0_3) Christian Walter <wolti@sil.at>:
 Notes: Added new functions to support registering of custom callback
   handlers. This makes it possible to implement new Modbus function
   codes without touching the protocol stack.
   New port for ATMega128 added. Thanks to Richard C Sandoz Jr. for
   the patches.

 Detailed notes:
   - FEATURE (ALL): Added support for registering new functions handlers
      with eMBRegisterCB.
   - FEATURE (AVR): Added patches from Richard C Sandoz Jr. for ATMega128

2006-09-06 (REL_1_0_2) Christian Walter <wolti@sil.at>:
 Notes: Fixed bug in FreeRTOS porting layer for STR71X/lwIP target where
   memory is not freed in the sys_arch_thread_remove function. 
   Synched MCF5235TCP port with the FreeRTOS/lwIP port for the STR71X.

 Detailed notes:
   - BUG (STR71XTCP): Sys_arch_thread_remove did not free the memory from
       the TCB.
   - BUG (STR71XTCP): Unnecessary call to vTaskSuspendAll removed.
   - BUG (STR71XTCP): Bug with counting variable. The first to lwIP tasks
       got the same name (lwIP0).
   - FEATURE (MCF5235TCP): Enhanced functions from the STR71X/lwIP port